unpackaged/main/default/objects/sked_Linked_Drives__c/fields/sked_Earliest_Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Earliest_Drive_Date__c</fullName>
    <label>Earliest Drive Date</label>
    <type>Date</type>
</CustomField>