unpackaged/main/default/objects/sked_Linked_Drives__c/fields/sked_Latest_Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>sked_Latest_Drive_Date__c</fullName>
    <label>Latest Drive Date</label>
    <type>Date</type>
</CustomField>