unpackaged/main/default/objects/sked_Linked_Drives__c/fields/sked_Linked_Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Linked_Drive_Type__c</fullName>
    <label>Linked Drive Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same Day</fullName>
            </value>
            <value>
                <fullName>Multi Day</fullName>
            </value>
            <value>
                <fullName>Multi Drive</fullName>
                <isActive>false</isActive>
                <label>Multi Drive</label>
            </value>
            <value>
                <fullName>Single Drive</fullName>
                <isActive>false</isActive>
                <label>Single Drive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>